--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -11,7 +11,7 @@
 
     <ui:define name="menu">
         <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
-            <li class="uk-nav-header">#{etiqueta['menu']}</li>
+            <li class="uk-nav-header">#{etiqueta['for.all.views.menu']}</li>
             <li class="uk-parent uk-open">
                 <a><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
                 <ul class="uk-nav-sub">
@@ -80,7 +80,7 @@
                                         </h:commandLink>
                                         <h:inputText id="filtrado" disabled="#{empty escuelaDashboardControlador.collectionDataModel.wrappedData}"
                                                      styleClass="#{empty escuelaDashboardControlador.busqueda ? 'uk-input' : 'uk-input filtrar uk-light'}"
-                                                     pt:placeholder="#{etiqueta['search']}"
+                                                     pt:placeholder="#{etiqueta['for.all.administrator.views.search']}"
                                                      autocomplete="off"
                                                      value="#{escuelaDashboardControlador.busqueda}"
                                                      pt:uk-tooltip="title: #{empty escuelaDashboardControlador.collectionDataModel.wrappedData
@@ -118,7 +118,7 @@
                                             <th><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.active']}</span></th>
                                             <th><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.licenses']}</span></th>
                                             <th><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.remaining.days']}</span></th>
-                                            <th><span class="letra-titulo ">#{etiqueta['options']}</span></th>
+                                            <th><span class="letra-titulo ">#{etiqueta['for.all.administrator.views.options']}</span></th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -133,7 +133,7 @@
                                     <tfoot class="uk-background-primary">
                                         <tr>
                                             <td colspan="6"><span class="letra-titulo">
-                                                <h:outputFormat value="#{etiqueta['pages.total']}" styleClass="letra-titulo">
+                                                <h:outputFormat value="#{etiqueta['for.all.administrator.views.pages.total']}" styleClass="letra-titulo">
                                                     <f:param value="#{escuelaDashboardControlador.htmlDataTable.rowCount}"/>
                                                     <f:param value="#{escuelaDashboardControlador.htmlDataTable.rowCount}"/>
                                                     <f:param value="#{escuelaDashboardControlador.htmlDataTable.rowCount}"/>
@@ -182,7 +182,7 @@
                                         #{escuela.diasRestantes}
                                     </h:column>
                                     <h:column headerClass="uk-background-primary uk-width-small uk-text-center">
-                                        <f:facet name="header"><span class="letra-titulo ">#{etiqueta['options']}</span></f:facet>
+                                        <f:facet name="header"><span class="letra-titulo ">#{etiqueta['for.all.administrator.views.options']}</span></f:facet>
                                         <h:outputText styleClass="uk-icon-button uk-text-center" pt:uk-icon="more-vertical"/>
                                         <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click">
                                             <ul class="uk-nav uk-dropdown-nav uk-text-left">
@@ -318,7 +318,7 @@
                                            warnClass="uk-text-warning uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-6@m uk-flex uk-flex-bottom">
-                                <h:commandButton  id="boton-busca-codigo" styleClass="uk-button uk-button-secondary" value="#{boton['search']}">
+                                <h:commandButton  id="boton-busca-codigo" styleClass="uk-button uk-button-secondary" value="#{boton['for.all.administrator.views.search']}">
                                     <f:ajax execute="formulario-escuela:input-escuela-codigo-postal"
                                             render="formulario-escuela:error-input-escuela-codigo-postal formulario-escuela:seleccion-colonia formulario-escuela:input-escuela-estado formulario-escuela:input-escuela-municipio"
                                             onevent="function funcion(data) { limpiaSelect(data) }"
@@ -333,7 +333,7 @@
                                                          value="#{escuelaDashboardControlador.escuelaDetalleModelo.coloniaModelo.id}"
                                                          id="seleccion-colonia"
                                                          label="#{administracion['dashboard.modal.colony']}">
-                                            <f:selectItem itemLabel="#{etiqueta['select']}" itemValue="#{null}" noSelectionOption="true"/>
+                                            <f:selectItem itemLabel="#{etiqueta['for.all.administrator.views.select']}" itemValue="#{null}" noSelectionOption="true"/>
                                             <f:selectItems value="#{escuelaDashboardControlador.direccionModelo.coloniaModeloLista}"
                                                            var="colonia"
                                                            itemValue="#{colonia.id}"
