vista detalle de grupo

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -123,17 +123,34 @@
                         <thead>
                         <tr>
                             <th>Nombre</th>
+                            <th>Relacionar oracion</th>
+                            <th>Actividad relacionar</th>
+                            <th>Gramatica</th>
                             <th>Mapa Mental</th>
                             <th>Completar</th>
-                            <th>Gramatica</th>
                             <th>Oraciones</th>
-                            <th>Activar Relacionar</th>
+                            <th>Progreso</th>
                         </tr>
                         </thead>
                         <tbody>
 
                         </tbody>
                     </table>
+                </div>
+                <div class="uk-margin-large-top">
+                    <label for="select2">Alumno:</label>
+                    <select id="select2">
+                        <option value="1">Mauricio</option>
+                        <option value="2">Juan</option>
+                        <option value="3">Antonio</option>
+                        <option value="4">Memo</option>
+                    </select>
+
+                        <label><input class="uk-radio" type="radio" name="radio2" checked=" "/> Detalles:</label>
+                        <label><input class="uk-radio" type="radio" name="radio2"/> Reporte:</label>
+                        <label><input class="uk-radio" type="radio" name="radio2"/> Eliminar:</label>
+
+
                 </div>
             </div>
         </div>
